# mewinfo

./: mewinfo.py  pyproject.toml
